ecmascript/parser/tests/typescript-errors/tsc/types/objectTypeLiteral/methodSignatures/objectTypesWithOptionalProperties/input.ts.stderr
error[1162]: An object member cannot be declared optional
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/methodSignatures/objectTypesWithOptionalProperties/input.ts:24:6
   |
24 |     x?: 1 // error
   |      ^

